# BelgianElectricCarMarketAnalyser

./: .gitignore  README.md  development.py  pyproject.toml  requirements-dev.txt
src/: .env.example  __init__.py  config.py  data_cleaning.py  data_preparation.py  file_management.py  graph_utils.py  logging_config.py  main.py  requirements.txt  utilities.py  visualization.py
src/data/: __init__.py  dataframes.py  electric_car_data.py  electric_car_models.py
src/electric_car_market_analyser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sites/: __init__.py  http_client.py  search_settings.py
src/sites/autoscout24/: __init__.py  autoscout24.py  autoscout_data.py  www.autoscout24.be_Archive [24-03-25 07-51-49].har
src/sites/deuxieme_main/: __init__.py  deuxieme_main.py
src/sites/gocar/: __init__.py  gocar.py  gocar_data.py
